sewup-derive/tests/compile-fail/ewasm_main_with_inputs.rs
use sewup_derive::ewasm_main;

#[ewasm_main]
fn main(input: usize) -> Result<(), ()> {
    Ok(())
}
